# ai-aerostruct-studio

./: .gitignore  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
docs/: RESEARCH_ROADMAP.md  architecture.md  skill_design.md
examples/: run_demo.py  sample_design_spec.json
src/ai_aerostruct/: __init__.py
src/ai_aerostruct/agent/: agent.py
src/ai_aerostruct/core/: geometry.py
src/ai_aerostruct/schemas/: design_spec.py
src/ai_aerostruct/skills/: aero_solver.py  base.py  registry.py  rule_checker.py  structure_solver.py
tests/: test_smoke.py
