[project]
name = "ai-aerostruct-studio"
version = "0.1.0"
description = "LLM + Skills based lightweight aero-structural design assistant."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Markslenin" }
]
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "streamlit>=1.30",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.ruff]
line-length = 100
